--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-feather": "^2.0.9",
+    "react-router-config": "^5.1.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
