--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-feather": "^2.0.9",
     "react-router-config": "^5.1.1",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "firebase": "^9.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
